asset registry fix

--- a/templates/greg/plays.html.twig
+++ b/templates/greg/plays.html.twig
@@ -17,14 +17,14 @@
   {
     title: 'The Bother of a Fly',
     slug: 'bother-of-a-fly',
-    image: '', # asset('images/plays/bother-of-a-fly.png'),
+    image: asset('images/plays/bother-of-a-fly.jpg'),
     blurb: 'Freida Harner battles ',
     tags: [],
   },
   {
     title: 'Spider on the Ceiling',
     slug: 'spider-on-the-ceiling',
-    image: asset('images/plays/spider-on-the-ceiling.png'),
+    image: asset('images/plays/spider-on-the-ceiling.jpg'),
     blurb: 'Cleo Carroway returns to her childhood home to settle the estates of her recently passed mother and grandfather.',
     description: '',
     tags: [],
@@ -32,7 +32,7 @@
   {
     title: 'Daisy Drops the Ball',
     slug: 'daisy-drops-the-ball',
-    image: asset('images/plays/daisy-drops-the-ball.png'),
+    image: asset('images/plays/daisy-drops-the-ball.jpg'),
     blurb: 'Daisy is a paragon of accomplishment. She deserves her new job prestigious art gallery. Nobody could possibly deserve it more. But today, Daisy is going to drop the ball.',
     description: '',
     tags: [],
@@ -40,7 +40,7 @@
   {
     title: 'Orbit',
     slug: 'orbit',
-    image: asset('images/plays/orbit.png'),
+    image: asset('images/plays/orbit.jpg'),
     blurb: 'When they receive unexpected transmission from a supposedly empty spacecraft, a flight control team on the graveyard shift clash as each is forced to choose between conscience, survival, and silence.',
     description: '',
     tags: [],
@@ -48,7 +48,7 @@
   {
     title: 'Tres Formaggio',
     slug: 'tres-formaggio',
-    image: asset('images/plays/tres-formaggio.png'),
+    image: asset('images/plays/tres-formaggio.jpg'),
     blurb: 'Things get complicated when the insecurities of a neglected member of a triad relathionship a Michelin-rated chef come together in this romantic comedy.',
     description: '',
     tags: [],
@@ -56,7 +56,7 @@
   {
     title: 'Skull of the Last Khan',
     slug: 'skull-of-the-last-khan',
-    image: asset('images/plays/skull-of-the-last-khan.png'),
+    image: asset('images/plays/skull-of-the-last-khan.jpg'),
     blurb: "Skull of the Last Khan is a sweeping political tragedy about the afterlife of revolution and the peril of symbols. Arman's reckless idealism threatens his friends and neighbors as he plays revolutionary, until a crossed line endangers the village. Arman seizes upon a plan to reclaim the skull of the last khan as a symbol of the new revolution.",
     description: '',
     tags: [],
