--- a/templates/litmas/rsvp.html.twig
+++ b/templates/litmas/rsvp.html.twig
@@ -18,7 +18,8 @@
     {{ form_label(form.note) }}
     {{ form_widget(form.note, {'attr': {'class': 'litmas-form-field'}}) }}
     {{ form_errors(form.note) }}
-  </div>  
+  </div>
+  <button type="submit">Submit RSVP</button>
   {{ form_end(form) }}
   </div>
 </div>
