--- a/templates/litmas/location.html.twig
+++ b/templates/litmas/location.html.twig
@@ -5,6 +5,9 @@
   <p>226 Arlington Ave, Pittsburgh, PA 15210</p>
 </div>
 <div id="bottlerocket-info">
+  {% if textContent %}
+  {{ textContent.html |raw }}
+  {% else %}
   <p>
     Bottlerocket Social Hall is a performance venue and bar in Allentown.    
   </p>
@@ -21,5 +24,6 @@
     Check out a map of the block with the lots on Bottlerocket's website under
     <a href="https://www.bottlerocketpgh.com/faq">Where Do I Park?</a>
   </p>
+  {% endif %}
 </div>
 {% endblock %}
