twig template endif

--- a/templates/litmas/faq.html.twig
+++ b/templates/litmas/faq.html.twig
@@ -19,6 +19,6 @@
   <a href="https://www.youtube.com/channel/UCIOfdO6uVS64Bwz8-hxWPQg">
     <i class="fa-brands fa-youtube"></i>
   </a>
-  {% end %}
+  {% endif %}
 </div>
 {% endblock %}
