--- a/templates/litmas/faq.html.twig
+++ b/templates/litmas/faq.html.twig
@@ -1,6 +1,6 @@
 {% extends 'litmas/base.html.twig' %}
 {% block content %}
-<h1 class="litmas-title">SLEIGHER</h1>
+<h1 class="litmas-title">SLEIGHER KRAMPUS BAND</h1>
 <div id="bottlerocket-info">
   {% if textContent %}
   {{ textContent.html |raw }}
