--- a/templates/litmas/location.html.twig
+++ b/templates/litmas/location.html.twig
@@ -4,7 +4,7 @@
 <div id="bottlerocket-address">
   <p>226 Arlington Ave, Pittsburgh, PA 15210</p>
 </div>
-<div id="bottlerocket-info">
+<div id="bottlerocket-info" class="litmas-details">
   {% if textContent %}
   {{ textContent.html |raw }}
   {% else %}
